--- a/app/views/devise/password_expired/show.html.erb
+++ b/app/views/devise/password_expired/show.html.erb
@@ -1,6 +1,6 @@
 <h2>Renew your password</h2>
 
-<%= form_for(resource, :as => resource_name, :url => [resource_name, :password_expired], :html => { :method => :put }) do |f| %>
+<%= form_for(resource, as: resource_name, url: [resource_name, :password_expired], html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
 
   <p><%= f.label :current_password, "Current password" %><br />
