--- a/app/views/devise/paranoid_verification_code/show.html.erb
+++ b/app/views/devise/paranoid_verification_code/show.html.erb
@@ -6,5 +6,5 @@
   <p><%= f.label :paranoid_verification_code, 'Verification code' %><br />
   <%= f.text_field :paranoid_verification_code, value: '' %></p>
 
-  <p><%= f.submit "Submit" %></p>
+  <p><%= f.submit 'Submit' %></p>
 <% end %>
