--- a/app/views/devise/paranoid_verification_code/show.html.erb
+++ b/app/views/devise/paranoid_verification_code/show.html.erb
@@ -1,7 +1,7 @@
 <h2>Submit verification code</h2>
 
 <%= form_for(resource, as: resource_name, url: [resource_name, :paranoid_verification_code], html: { method: :put }) do |f| %>
-  <%= devise_error_messages! %>
+  <%= render partial: 'devise/shared/error_messages' %>
 
   <p><%= f.label :paranoid_verification_code, 'Verification code' %><br />
   <%= f.text_field :paranoid_verification_code, value: '' %></p>
